--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -9,18 +9,18 @@ jobs:
     steps:
      - uses: actions/checkout@v2
        with:
-        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
-        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+        persist-credentials: false
+        fetch-depth: 0
      - uses: actions/setup-python@v2
        with:
-        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+        python-version: '3.x'
+        architecture: 'x64' 
      - name: Scrape
        run: |
-	git checkout gh_pages
-	pip install -r requirements.txt
-	python scrape.py
-	rm -rf .github
+        git checkout gh_pages
+        pip install -r requirements.txt
+        python scrape.py
+        rm -rf .github
      - name: Commit files
        run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
