added exec for every push

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,7 +1,10 @@
 name: Python Scraper
 on:
+  push:
+    branches:
+      - main
   schedule:
-  - cron: '* * * * *'
+    - cron: '* * * * *'
 
 jobs:
   stale:
