--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -21,6 +21,7 @@ jobs:
         architecture: 'x64' 
      - name: Scrape
        run: |
+        git fetch
         git restore -s gh-pages -SW -- data.json
         pip install -r requirements.txt
         python scrape.py
