--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -11,12 +11,14 @@ jobs:
   stale:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v2
+     - name: Checkout gh-pages
+       uses: actions/checkout@v2
        with:
         persist-credentials: false
         fetch-depth: 0
         ref: 'gh-pages'
-    - uses: actions/checkout@v2
+     - name: Checkout main
+       uses: actions/checkout@v2
        with:
         persist-credentials: false
         fetch-depth: 0
