--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -4,8 +4,7 @@ on:
     branches:
       - main
   schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '* * * * *'
+    - cron:  '* 1 * * *'
 
 jobs:
   stale:
