updated job name

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -7,7 +7,7 @@ on:
     - cron:  '*/60 * * * *'
 
 jobs:
-  stale:
+  scrape:
     runs-on: ubuntu-latest
     steps:
      - name: Checkout branch gh-pages
