Added json artifact for test build

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -35,3 +35,7 @@ jobs:
        run: pip install -r requirements.txt
      - name: Scrape
        run: python scrape.py
+     - uses: actions/upload-artifact@v2
+       with:
+        name: Output JSON
+        path: data.json
