ignore codeql on gh-pages deployment

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,7 +12,10 @@
 name: "CodeQL"
 
 on:
-  push: # All branches
+  push:
+    branches-ignore:
+      - gh-pages
+    
   schedule:
     - cron: '32 1 * * 1'
 
