--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron:  '0 */12 * * *'
+  #schedule:
+  #  - cron:  '0 */12 * * *'
 
 jobs:
   scrape:
